bubba-backend (2.4~pre18) hugo vincent; urgency=low

  * remove old usage of the "t" function (Closes: #1843)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 18 Jan 2012 13:02:41 +0100

bubba-backend (2.4~pre17) hugo vincent; urgency=low

  * Disable ipv6 in proftpd configuration (Closes: #1792)
  * Remove missing locks that should have been removed before (Closes: #1837)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 17 Jan 2012 15:01:47 +0100

bubba-backend (2.4~pre16) hugo vincent; urgency=low

  * Updating copyright information to fit company policy

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 17:01:58 +0100

bubba-backend (2.4~pre15) hugo vincent; urgency=low

  * change to bubba3-kernel

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 13:56:14 +0100

bubba-backend (2.4~pre14) hugo vincent; urgency=low

  * remove bubba-modules reference

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 13:54:18 +0100

bubba-backend (2.4~pre13) hugo vincent; urgency=low

  * disable Tor

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 13:51:23 +0100

bubba-backend (2.4~pre12) hugo vincent; urgency=low

  * Enable logitechmediaserver is squeezecenter was enabled (Closes: #1813)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 03 Jan 2012 15:11:33 +0100

bubba-backend (2.4~pre11) hugo vincent; urgency=low

  * specify minimum version on the bubba-kernel

 -- Carl Fürstenberg <carl@excito.com>  Wed, 21 Dec 2011 15:58:10 +0100

bubba-backend (2.4~pre9) vincent; urgency=low

  * change tor control socket
  * do not use ipv6 for proftpd (Closes: #1792)
  * touch  default locale file unless exists (Closes: #1807)
  * squeezecenter → logitechmediaserver

 -- Carl Fürstenberg <carl@excito.com>  Mon, 19 Dec 2011 13:36:34 +0100

bubba-backend (2.4~pre8) vincent; urgency=low

  * Make sure main.cf is chmodded 644 on modification (Closes: #1762)
  * switch mt-daapd to forked-daapd (Closes: #1791)
  * disable poert forward opening per default (Closes: #1777)